Add GET AbsenceRecord
