# app/resources/api/v1/absence_record_resource.rb
@@ -1,0 +1,5 @@
+class Api::V1::AbsenceRecordResource < JSONAPI::Resource
+  model_name 'AbsenceRecord'
+
+  attributes *ETL::Headers::AbsenceRecord.all
+end
